MB-44097: Track collection size changes in replay

In the concurrent flush compaction replay we must track the size
changes of non-prepare namespace items as the tracking of
prepares in the collection sizes requires us to reset their values
post-compaction.

Change-Id: I1e9139e8588cb9af21eaad63abcb7069cc93cbd4
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/145542
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>